# tink-backend-aggregation

./: .bazelproject  .bazelrc  .dockerignore  .forego  .gitattributes  .gitignore  .gitmodules  .secrets.baseline  BUILD  CODEOWNERS  CONTRIBUTING.md  Procfile  Procfile.abn-amro  Procfile.cornwall  Procfile.kirkby  Procfile.minikube  Procfile.minikube.aggregation  Procfile.minikube.provider  Procfile.newport  Procfile.test-partner  README.md  README_CODEOWNERS.md  RunAggregation.sh  TROUBLESHOOTING.md  WORKSPACE  \  abdeljalil.moussa.csr  abdeljalil.moussa.key  bazel-Tink  bazel-wrapper  bors.toml  codecov.yml  coverage.sh  fetch-dependencies.sh  percentiles.sh  sonar-project.properties  stamp.sh
src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fi/banks/spankki/: BUILD  BUILD.bazel  SpankkiAgentTest.java
src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fi/banks/spankki/v1/: SpankkiAgentTest.java
src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fi/banks/spankki/v2/: SpankkiAgentTest.java
src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/fi/banks/spankki/v2/fetcher/investment/entities/: PortfolioEntityTest.java
src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/se/banks/seb/: BUILD  BUILD.bazel  SEBAgentTest.java  SEBDualAgentTest.java  SebAgentTest.java  SebDualAgentTest.java
src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/se/banks/seb/manual/: BUILD  SebAgentTest.java  SebDualAgentTest.java
(+44005 files in other folders)
